[package]
name = "nmapper"
version = "0.1.0"
edition = "2021"
description = "Network mapper tool for host discovery, port scanning, and vulnerability assessment"

[dependencies]
tokio = { version = "1", features = ["full"] }
pnet = "0.35"
pnet_datalink = "0.35"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
colored = "2"
ipnetwork = "0.20"
anyhow = "1"
socket2 = { version = "0.5", features = ["all"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dns-lookup = "2"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
native-tls = "0.2"
